--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>m1938永久地址发布页，收藏我回家不迷路！</title>
+    <title>桃子视频永久地址发布页，收藏我回家不迷路！</title>
 <style>
     * {
         margin: 0;
@@ -347,16 +347,17 @@
                 </div> -->
             </div>
             <div class="g-flex_spb g-flex_aic g-flex_wrap">
-                <div class="box-btn box-btn-type">永久网址1<br>www.m1938.com</div>
-                <div class="box-btn box-btn-type">永久网址2<br>www.m1938.cn</div>
+                <div class="box-btn box-btn-type">永久网址1<br>www.taozi.cfd</div>
+                <div class="box-btn box-btn-type">永久网址2<br>taozi91.github.io</div>
             </div>
             <div class="box-btn box-btn-type1 g-flex_spb g-flex_aic g-flex_wrap">
                 <div class="box-btn-tag">
                     <img class="tag-img" src="slice2.png" alt="">
                     <span class="tag-title">最新网址</span>
                 </div>
-                <a class="g-flex_1 box-btn box-btn-type2" href="http://m1938.com/">https://m1938.com</a>
-                <a class="g-flex_1 box-btn box-btn-type2" href="http://m1938.com/">https:/m1938.com</a>
+                <a class="g-flex_1 box-btn box-btn-type2" href="http://tt.taozi2.top">https://tt.taozi2.top</a>
+                <a class="g-flex_1 box-btn box-btn-type2" href="http://tt.taozi3.top">https://tt.taozi3.top</a>
+                <a class="g-flex_1 box-btn box-btn-type2" href="http://tt.taozi4.top">https://tt.taozi4.top</a>
             </div>
             <div class="box-btn box-btn-type1" style="background-color: #fffdf5;padding: 0.34rem 0.4rem 0.28rem;">
                 <div class="box-btn-tag">
@@ -374,7 +375,7 @@
                     <img src="finger.gif" alt="">
                 </div>
             </div>
-            <p class="copyright"><b>官方邮箱：m1938.com</b></p>
+            <p class="copyright"><b>官方邮箱：taoziship@gmail.com</b></p>
         </div>
     </div>
 </div>
